--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ layout: default
   var posts = document.getElementById('recent-posts');
   var child_nodes = posts.childNodes, k, node, h,
       col_width, col0_y, col1_y, col1_x,
-      origin = {x:0, y:0}, node_count = 0, is_col0, row0_max_y;
+      origin = {x:0, y:0}, node_count = 0, is_col0, row0_max_y - 0;
 
   posts.style.position = (window.__post_grid_width <= 680) ? null : 'relative';
 
