--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ layout: default
   var posts = document.getElementById('recent-posts');
   var child_nodes = posts.childNodes, k, node, h,
       col_width, col0_y, col1_y, col1_x,
-      origin = {x:0, y:0}, node_count = 0, is_col0, row0_max_y - 0;
+      origin = {x:0, y:0}, node_count = 0, is_col0, row0_max_y = 0;
 
   posts.style.position = (window.__post_grid_width <= 680) ? null : 'relative';
 
@@ -87,12 +87,16 @@ layout: default
         }
         break;
       }
+      node.style.position = 'absolute';
       if (col0_y === undefined) {
         origin.x = node.offsetLeft;
         origin.y = node.offsetTop;
         col_width = node.clientWidth;
         col0_y = origin.y + node.clientHeight;
         row0_max_y = col0_y;
+        node.style.top = '0px';
+        node.style.left = '0px';
+        node.style.width = col_width + 'px';
       } else {
         if (col1_y === undefined) {
           col1_y = origin.y + node.clientHeight;
@@ -100,25 +104,29 @@ layout: default
           if (col1_y > row0_max_y) {
             row0_max_y = col1_y;
           }
+          node.style.top = '0px';
+          node.style.left = col1_x + 'px';
+          node.style.width = col_width + 'px';
         } else {
           if (window.__post_grid_width <= 680) {
-            // console.log('Clear');
             node.style.position = null;
             node.style.width = null;
             node.style.left = null;
             node.style.top = null;
           } else {
             is_col0 = (node_count % 2) === 0;
-            node.style.position = 'absolute';
             node.style.width = col_width + 'px';
             if (is_col0) {
               node.style.left = origin.x + 'px';
               node.style.top = col0_y + 'px';
               col0_y += node.clientHeight;
+              node.classList.add('col0');
             } else {
+              console.log('col1_y:', col1_y);
               node.style.left = col1_x + 'px';
               node.style.top = col1_y + 'px';
               col1_y += node.clientHeight;
+              node.classList.add('col1');
             }
           }
           // console.dir(node);
