--- a/index.html
+++ b/index.html
@@ -32,60 +32,41 @@ layout: default
   </div>
 </div>
 <script type="text/javascript">
-(function(f){
-  var onload = function(f) {
-    if (window.addEventListener) {
-      window.addEventListener('DOMContentLoaded', f, false);
-    } else {
-      window.attachEvent('onload', f);
-    }
-  };
-  onload(function(){
-    f();
-    if (window.addEventListener) {
-      window.addEventListener('resize', f, false);
-    } else {
-      window.attachEvent('resize', f);
-    }
-  });
-})(function(){
-  var winw = window.innerWidth, w; //, width_thresholds = [680, 780];
-  w = window.__post_grid_width;
+(function(){
 
-  if ( (w !== undefined) &&
-       ( (w === 680 && winw < 680) ||
-         (w === 780 && winw >= 680 && winw < 780) ||
-         (w === 10000 && winw >= 780)
-       )
-     )
-  {
-    // console.log('noop w:', w+ ', winw:', winw);
-    return;
-  } else {
-    window.__post_grid_width = w =
-      winw > 780 ? 10000 :
-      winw > 680 ? 780 :
-                   680;
-    // console.log('op w:', w);
-  }
+var columns = null;
+
+function f(){
+  var cols = window.innerWidth >= 890 ? 2 : 1;
+  if (columns === cols) { return; }
+  columns = cols;
+  // if (cols === 2) console.log('switch to multi-column');
+  // else            console.log('switch to single-column');
 
   var posts = document.getElementById('recent-posts');
-  var child_nodes = posts.childNodes, k, node, h,
+  var childNodes = posts.childNodes, i, L = childNodes.length, node, h,
       col_width, col0_y, col1_y, col1_x,
       origin = {x:0, y:0}, node_count = 0, is_col0, row0_max_y = 0;
 
-  posts.style.position = (window.__post_grid_width <= 680) ? null : 'relative';
+  posts.style.position = (columns === 1) ? null : 'relative';
 
-  for (k in child_nodes) {
-    node = child_nodes[k];
+  for (i = 0; i !== L; ++i) {
+    node = childNodes[i];
     if (node.nodeType === Node.ELEMENT_NODE) {
       if (node.className === 'breaker') {
-        if (window.__post_grid_width <= 680) {
+        if (columns === 1) {
           node.style.height = null;
         } else {
-          node.style.height = (Math.max(col0_y, col1_y) - row0_max_y) + 'px';
+          node.style.height = Math.max(col0_y, col1_y) + 'px';
         }
         break;
+      }
+      if (columns === 1) {
+        node.style.position = null;
+        node.style.top = null;
+        node.style.left = null;
+        node.style.width = null;
+        continue;
       }
       node.style.position = 'absolute';
       if (col0_y === undefined) {
@@ -97,6 +78,7 @@ layout: default
         node.style.top = '0px';
         node.style.left = '0px';
         node.style.width = col_width + 'px';
+        //node.style.border = '1px solid red'
       } else {
         if (col1_y === undefined) {
           col1_y = origin.y + node.clientHeight;
@@ -108,32 +90,47 @@ layout: default
           node.style.left = col1_x + 'px';
           node.style.width = col_width + 'px';
         } else {
-          if (window.__post_grid_width <= 680) {
-            node.style.position = null;
-            node.style.width = null;
-            node.style.left = null;
-            node.style.top = null;
+          // node.style.position = 'absolute';
+          is_col0 = (node_count % 2) === 0;
+          node.style.width = col_width + 'px';
+          if (is_col0) {
+            node.style.left = origin.x + 'px';
+            node.style.top = col0_y + 'px';
+            node.classList.add('col0');
+            col0_y += node.clientHeight;
           } else {
-            is_col0 = (node_count % 2) === 0;
-            node.style.width = col_width + 'px';
-            if (is_col0) {
-              node.style.left = origin.x + 'px';
-              node.style.top = col0_y + 'px';
-              col0_y += node.clientHeight;
-              node.classList.add('col0');
-            } else {
-              node.style.left = col1_x + 'px';
-              node.style.top = col1_y + 'px';
-              col1_y += node.clientHeight;
-              node.classList.add('col1');
-            }
+            node.style.left = col1_x + 'px';
+            node.style.top = col1_y + 'px';
+            node.classList.add('col1');
+            col1_y += node.clientHeight;
           }
-          // console.dir(node);
         }
       }
       ++node_count;
     }
   }
+}
 
-});
+function setup(){
+  f();
+  var onresize = f;
+  // var timer = null;
+  // function onresize() {
+  //   if (timer !== null) { return; }
+  //   timer = setTimeout(function(){ timer = null; f(); }, 100);
+  // }
+  if (window.addEventListener) {
+    window.addEventListener('resize', onresize);
+  } else {
+    window.attachEvent('resize', onresize);
+  }
+}
+
+if (window.addEventListener) {
+  window.addEventListener('DOMContentLoaded', setup);
+} else {
+  window.attachEvent('onload', setup);
+}
+
+})();
 </script>
